--- a/vedupajiweb/sourcecode.html
+++ b/vedupajiweb/sourcecode.html
@@ -53,7 +53,6 @@
             background-color: rgb(255, 255, 255);
             background-position: center;
             z-index: 5;
-
         }
 
         .up {
@@ -61,7 +60,6 @@
             width: 100%;
             top: 0;
             z-index: 2;
-
         }
 
 
@@ -71,7 +69,6 @@
             width: 100%;
             border-top: 0.1rem solid white;
             display: flex;
-
         }
 
         .bu {
@@ -84,13 +81,11 @@
             padding-bottom: 0.25rem;
             height: 4rem;
             width: 4rem;
-
         }
 
         .bu:hover {
             box-shadow: 0 0 0px 0.1rem;
             border-radius: 0.2rem;
-
         }
 
         .plp {
@@ -104,8 +99,6 @@
             text-align: left;
             padding-left: 3rem;
             text-decoration: none;
-
-
         }
 
         .log {
@@ -115,7 +108,6 @@
             border: none;
             margin-right: 3rem;
             margin-top: 1.5rem;
-
         }
 
         .meu {
@@ -126,7 +118,6 @@
             justify-content: center;
             align-items: center;
             width: auto;
-
         }
 
 
@@ -137,7 +128,6 @@
             padding: 1.7rem 2.5rem;
             transition: background-color 0.5s;
             margin-top: 0%;
-
         }
 
         .men {
@@ -151,7 +141,6 @@
             transition: background-color 0.4s;
             background-color: white;
             width: 20rem;
-
         }
 
         .men:hover {
@@ -173,9 +162,6 @@
             margin-top: 1.5rem;
             transition: background-color 0.4s;
             background-color: white;
-
-
-
         }
 
         .fofo1 {
@@ -208,7 +194,6 @@
             padding: 2rem 2.1rem;
             transition: background-color 0.4s;
             position: absolute;
-
         }
 
         .cl {
@@ -216,7 +201,6 @@
             border: 0.1rem solid black;
             border-radius: 25%;
             color: black;
-
         }
 
 
@@ -244,13 +228,11 @@
             padding: 0.5rem;
             width: 10rem;
             text-align: center;
-
         }
 
         .onhover_color {
             border-radius: 2%;
             transition: background-color 0.5s;
-
         }
 
         .onhover_color:hover {
@@ -272,29 +254,23 @@
 
         .class_anim {
             animation: change_class infinite 1s;
-
         }
 
         @keyframes change_class {
             100% {
                 transform: rotate(90deg);
             }
-
         }
 
         .class_anim120 {
             animation: change_class1 infinite 1s;
-
         }
 
         @keyframes change_class1 {
             100% {
                 transform: rotate(-90deg);
             }
-
         }
-
-
 
         .so1o {
             height: auto;
@@ -306,7 +282,6 @@
             transition: background-color 0.4s;
             box-shadow: -0.005rem 0.03rem 0.3rem black;
             position: absolute;
-
         }
 
         .so11o {
@@ -319,12 +294,10 @@
             transition: background-color 0.4s;
             box-shadow: -0.005rem 0.03rem 0.3rem black;
             margin-right: 1.5rem;
-
         }
 
         .so1o a,
         .so11o a {
-
             padding: 1rem 1rem;
             color: black;
             text-decoration: none;
@@ -333,7 +306,6 @@
             transition: color 0.4s;
             transition: background-color 0.4s;
             display: block;
-
         }
 
         .so1o:hover,
@@ -341,14 +313,12 @@
             background-color: rgb(255, 220, 62);
             color: black;
             box-shadow: none;
-
         }
 
         .so1o a:hover,
         .so11o a:hover {
             background-color: white;
         }
-
 
         ::placeholder {
             color: rgb(255, 255, 255);
@@ -374,7 +344,6 @@
             }
         }
 
-
         .hha {
             text-align: center;
             font-family: 'Josefin Sans', sans-serif;
@@ -384,14 +353,11 @@
             padding: 1.2rem;
             background-color: rgb(255, 220, 62);
             transition: background-color 0.4s;
-
         }
 
         .hha:hover {
             background-color: white;
         }
-
-
 
         .ted {
             margin-top: 0rem;
@@ -408,7 +374,6 @@
 
         .imo1 {
             height: 25.5rem;
-            width: 45rem;
             margin-top: 1rem;
         }
 
@@ -418,7 +383,6 @@
             position: absolute;
             font-weight: bold;
             margin-left: 1rem;
-
         }
 
         .icon_collection {
@@ -428,7 +392,6 @@
             margin-top: 23rem;
             margin-left: 19rem;
             border-radius: 5%;
-
         }
 
         .icon_collection_1 {
@@ -437,7 +400,6 @@
             position: absolute;           
             border-radius: 5%;
             transition: background-color 0.5s;
-
         }
 
         .icon_collection_2 {
@@ -446,7 +408,6 @@
             border-radius: 5%;
             float: right; 
             transition: background-color 0.5s;
-
         }
 
 
@@ -462,8 +423,6 @@
             margin-top: 5rem;
         }
 
-
-
         .stn {
             margin-top: 1rem;
             width: 45rem;
@@ -474,7 +433,6 @@
             box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.25);
             border-radius: 0.3rem;
             margin-left: 0.5rem;
-
         }
 
         .seeee1 {
@@ -486,7 +444,6 @@
             transition: background-color 0.5s;
             transition: color 0.7s;
             text-decoration: none;
-
         }
 
         .seeee1:hover {
@@ -510,7 +467,6 @@
             align-items: center;
             margin: 0.5rem;
             box-shadow: 0 0 0 0.1rem white;
-
         }
 
         footer .lococo a {
@@ -526,7 +482,6 @@
             margin-top: 2rem;
             flex-direction: column;
             background-color: rgb(15, 15, 15);
-
         }
 
         .lococo {
@@ -538,7 +493,6 @@
             margin-bottom: 3rem;
             width: 5rem;
         }
-
 
         #ffo1:hover {
             height: 4.5rem;
@@ -571,10 +525,6 @@
             margin-top: 0;
             box-shadow: none;
         }
-
-
-
-
 
         .hr1 {
             width: 2.5rem;
@@ -634,18 +584,6 @@
             justify-content: center;
         }
 
-
-
-
-
-
-
-
-
-
-
-
-
         @media only screen and (max-width:850px) {
             .buti {
                 display: flex;
@@ -669,31 +607,20 @@
                 transform: none;
                 position: relative;
                 float: right;
-
             }
-
-
         }
-
 
         @media only screen and (max-width:1800px) and (min-width:500px) {
             .tedo {
                 justify-content: center;
             }
-
         }
 
-
-
         @media only screen and (max-width:1800px) {
-
-
-
             .ohbh {
                 width: 100%;
                 overflow: hidden;
             }
-
 
             .seeee1 {
                 background-color: transparent;
@@ -706,59 +633,34 @@
                 transition: color 0.7s;
             }
 
-
-
-
-
-
-
             .ap {
                 color: white;
                 text-decoration: none;
                 font-family: 'Josefin Sans', sans-serif;
                 transition: background-color 0.5s;
                 margin-top: 0%;
-
-
             }
-
-
         }
 
-
-
-
-
-
-
-
-
-
         @media only screen and (max-width:550px) {
-
-
             .ptric {
                 margin-top: 2rem;
             }
         }
 
         @media only screen and (max-width:500px) {
-
             .ted {
                 margin-top: 0rem;
             }
 
             .hee {
                 height: 4rem;
-                display: ;
-
             }
 
             .vaka {
                 margin-left: 1rem;
                 font-size: 300%;
                 margin-top: 0.5rem;
-
             }
 
             .vaka1 {
@@ -769,8 +671,6 @@
                 margin-top: 0.2rem;
                 margin-left: 1.5rem;
             }
-
-
 
             .men {
                 margin-top: 1.5rem;
@@ -783,7 +683,6 @@
             }
 
             .changing_mode10 {
-
                 margin-left: 0%;
                 margin-top: 4.5rem;
                 width: 7rem;
@@ -808,15 +707,11 @@
                 width: 35rem;
                 padding: 0.5rem;
                 margin-left: 0%;
-
-
             }
 
             .tyup {
-
                 width: 30rem;
                 transform: translate(10%, 60%);
-
             }
 
             .tedo {
@@ -826,9 +721,9 @@
             .teteo {
                 margin-top: 0%;
             }
-
-
-
+            .icon_collection{
+                margin-left: 13rem;
+            }
         }
     </style>
 
@@ -854,7 +749,7 @@
 
             <div class="buut" style="justify-content: center;width: 75%;">
                 <div class="meu">
-                    <a href="index.html" target="_blank" onmouseover="ac(0)" onmouseout="ao(0)" class="ap"
+                    <a href="https://vedupaji.blogspot.com/" target="_blank" onmouseover="ac(0)" onmouseout="ao(0)" class="ap"
                         href="">Home</a>
                     <a onmouseover="ac(1)" onmouseout="ao(1)" class="ap">Entertainment</a>
 
@@ -895,7 +790,7 @@
 
         <div style="height:auto;width: auto; display: flex;flex-direction: column;align-items: flex-end;">
             <div class="fofo">
-                <a href="index.html" target="_blank " class="fofo1">Home</a>
+                <a href="https://vedupaji.blogspot.com/" target="_blank " class="fofo1">Home</a>
                 <a class="fofo1">Entertainment</a>
                 <a id="opl" class="fofo1">Shop</a>
                 <!--onclick="starthide()"-->
